v 0.18

- Add command line parameters for stage/room/camera.
- Moved each game in separate directories.
- Moved each renderer in separate directories.

v 0.17

- VS2005: Create configurations for ffmpeg, instead of separate project.
- Preliminary model animation.

v 0.16

- Software renderer: Flush all 3D rendering before drawing 2D stuff.
- Software renderer: Rewritten SBuffer implementation.
- Software renderer: Background image masks.
- Added -fps parameter.
- Added preliminary menu (display stage/room/camera and player pos).
- Movie player: Updated for latest FFmpeg revision. Added separate project
  file for vs2005.
- Updated for latest Physfs 2.x revision.

v 0.15

- Preliminary support for background masks, togglable
  (RE1 pc/ps1, RE2 pc demo, RE3 pc).
  Note: No transparency for software renderer.
- OpenGL: Add toggle to display depth buffer.

v 0.14

- Add separate clock for engine, so loading times are not taken into account
  for player movements.
- Add timing in ms, in log file.
- Heavy rewrite for texturing. The background image is processed with same stuff
  as the model textures.
- Heavy rewrite for drawing code. EMD model is organized in a skel structure,
  with the various meshes.
- Can set width,height,bpp of video mode
- Software renderer: Bilinear filtering for background.
- Display model skeleton.

v 0.13

- Dump room scripts (see -dumpscript command).
- Display doors and walls on map.
- Can enter doors (only RE2/RE3).

v 0.12

- Fixed some bugs in S-Buffer.
- Added 24 bits rendering to software renderer.
- Added room map with camera, camera switches and boundaries.
- OpenGL: Disabled ARB_npot texture support, till testable.
- OpenGL: Only upload texture to video card when loading model.
- Camera switches, and boundary checks for player movement.
- RE1: Fixed wrong row length for some backgrounds.

v 0.11

- Received contribution to add more PS1 versions, thanks to Mark Grass.
- Reworked detection of game/demo versions.