@@ -3,6 +3,8 @@ v 0.18
 - Add command line parameters for stage/room/camera.
 - Moved each game in separate directories.
 - Moved each renderer in separate directories.
+- Better case-insensitive filenames management.
+- Remove gamma setting
 
 v 0.17
 
